[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Ghost/Ghost.gd" type="Script" id=1]
[ext_resource path="res://scenes/Particles/UnfreezeParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player/Idle0.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Run0.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Run1.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Run2.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Run3.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Run4.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Run7.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Jump0.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Jump1.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Jump3.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Jump4.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.4205
height = 24.1982

[node name="Ghost" type="KinematicBody2D" groups=[
"Ghost",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
freeze_particles = ExtResource( 2 )

[node name="Ghost_animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3.86 )
shape = SubResource( 2 )

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_hit_player"]
[connection signal="timeout" from="FreezeTimer" to="." method="unfreeze"]
